Fix autocomplete menu showing behind course cards

--- a/app/assets/stylesheets/course.css.less
+++ b/app/assets/stylesheets/course.css.less
@@ -13,3 +13,7 @@
 .badge-pending {
   background-color: @deep-orange-A400;
 }
+.card.course {
+  position: unset;
+  z-index: 0;
+}
